--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "remark-torchlight",
     "version": "0.0.2",
     "description": "A remark plugin for Torchlight - the syntax highlighting API.",
-    "main": "index.js",
+    "module": "index.js",
+	"type": "module",
     "scripts": {
         "test": "standard --env jest && jest"
     },
